Add open download folder menu item to Episodes menu.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -142,6 +142,12 @@
       </section>
       <section>
         <item>
+          <attribute name="action">win.openEpisodeDownloadFolder</attribute>
+          <attribute name="label" translatable="yes">Open download folder</attribute>
+        </item>
+      </section>
+      <section>
+        <item>
           <attribute name="action">win.findEpisode</attribute>
           <attribute name="label" translatable="yes">Find Episode</attribute>
           <attribute name="accel">&lt;Primary&gt;f</attribute>
