preferences.ui: Set 'can-focus' to False on GtkFlowBoxChild widgets

--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -522,7 +522,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkLabel" id="label_episode_limit">
                                         <property name="visible">True</property>
@@ -537,7 +537,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkSpinButton" id="spinbutton_episode_limit">
                                         <property name="visible">True</property>
@@ -593,7 +593,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkLabel" id="label_auto_download">
                                         <property name="visible">True</property>
@@ -608,7 +608,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkComboBox" id="combo_auto_download">
                                         <property name="visible">True</property>
@@ -622,7 +622,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">4</property>
+                                <property name="position">5</property>
                               </packing>
                             </child>
                             <child>
@@ -764,7 +764,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkLabel" id="label_device_type">
                                         <property name="visible">True</property>
@@ -778,7 +778,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkComboBox" id="combobox_device_type">
                                         <property name="visible">True</property>
@@ -806,7 +806,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkLabel" id="label_device_mount">
                                         <property name="visible">True</property>
@@ -820,7 +820,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkButton" id="btn_filesystemMountpoint">
                                         <property name="visible">True</property>
@@ -876,7 +876,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkLabel" id="label_device_playlists">
                                         <property name="visible">True</property>
@@ -890,7 +890,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkButton" id="btn_playlistfolder">
                                         <property name="visible">True</property>
@@ -945,7 +945,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkLabel" id="label_on_sync">
                                         <property name="visible">True</property>
@@ -959,7 +959,7 @@
                                 <child>
                                   <object class="GtkFlowBoxChild">
                                     <property name="visible">True</property>
-                                    <property name="can-focus">True</property>
+                                    <property name="can-focus">False</property>
                                     <child>
                                       <object class="GtkComboBox" id="combobox_on_sync">
                                         <property name="visible">True</property>
