Do not make default episode limit of 200 a translatable string.
Reported-by: Karl Ove Hufthammer (@huftis)

--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -557,7 +557,7 @@
                                         <property name="visible">True</property>
                                         <property name="can-focus">True</property>
                                         <property name="halign">center</property>
-                                        <property name="text" translatable="yes">200</property>
+                                        <property name="text">200</property>
                                         <property name="adjustment">adjustment_episode_limit</property>
                                         <property name="value">200</property>
                                       </object>
